syntax = "proto3";

package jogasaki.proto.sql.response;

option java_multiple_files = false;
option java_package = "com.tsurugidb.sql.proto";
option java_outer_classname = "SqlResponse";

import "jogasaki/proto/sql/common.proto";
import "jogasaki/proto/sql/status.proto";

/*
 * Definition of sub fields for Response.
 */

/* For response of success when there is no data to return. */
message Success {
}

/* For response of error containing a error message. */
message Error {
  status.Status status = 1;
  string detail = 2;
}


/*
 * Each response message
 */

/* For response to ExecuteStatement, ExecutePreparedStatement, Commit, and/or Rollback. */
message ResultOnly {
  oneof result {
    Success success = 1;
    Error error = 2;
  }
}

/* For response to Begin. */
message Begin {
  oneof result {
    common.Transaction transaction_handle = 1;
    Error error = 2;
  }
}

/* For response to Prepare. */
message Prepare {
  oneof result {
    common.PreparedStatement prepared_statement_handle = 1;
    Error error = 2;
  }
}

/* For response to ExecuteQuery and/or ExecutePreparedQuery. */
message ExecuteQuery {
  string name = 1;  /* The name of the channel to which the ResultSet set will be sent. */
  ResultSetMetadata record_meta = 2;
}

/* For response to Explain. */
message Explain {
  oneof result {
    string output = 1;  /* The result output string of the explain. */
    Error error = 2;
  }
}

// describe about a table.
message DescribeTable {
  reserved 1 to 10;

  // request is successfully completed.
  message Success {

    // the database name.
    string database_name = 1;

    // the schema name.
    string schema_name = 2;

    // the table name.
    string table_name = 3;

    // the table column information.
    repeated common.Column columns = 4;
  }

  // the response body.
  oneof result {
    // request is successfully completed.
    Success success = 11;

    // engine error was occurred.
    Error error = 12;
  }
}

// execute a statement with 2-D parameter table.
message Batch {
    reserved 1 to 10;

    // the response body.
    oneof result {
        // request is successfully completed.
        Success success = 11;

        // engine error was occurred.
        Error error = 12;
    }
}

/* For response message from the SQL service. */
message Response {
  oneof response {
    ResultOnly result_only = 1;
    Begin begin = 2;
    Prepare prepare = 3;
    ExecuteQuery execute_query = 4;
    Explain explain = 5;
    DescribeTable describe_table = 6;
    Batch batch = 7;
  }
}

// metadata of result sets.
message ResultSetMetadata {

  // the column information.
  repeated common.Column columns = 1;
}
